--- a/NodeJS/ch10/package.json
+++ b/NodeJS/ch10/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ch9",
+  "name": "ch10",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/dutysidney/officer_training#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
